@@ -1,5 +1,3 @@
-#include <SusyAnalysis/MyTest.h>
-
 #include <SusyAnalysis/chorizo.h>
 #include "SusyAnalysis/particles.h"
 #include "SusyAnalysis/utility.h"
@@ -18,8 +16,4 @@
 #pragma link C++ class Particle+;
 #pragma link C++ class Jet+;
 #pragma link C++ class MET+;
-#endif
-
-#ifdef __CINT__
-#pragma link C++ class MyTest+;
 #endif
