@@ -18,6 +18,8 @@ HIGH PRIORITY
 
 ** truth navigation
 
+** apply isolation corrections once IsoTool is ready. It will probably come through SUSYTools anyways.
+
 
 VALIDATION/CHECK
 --------------------------------------------------------------------------------------------------------
